spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -500,6 +500,8 @@ ul {
 
 .contact-info {
     text-align: center;
-    padding-bottom: 10em;
-    
+}
+
+.behance {
+    padding-bottom: 20em;
 }
